--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 :root {
-  --color-background: var(--vt-c-white);
+  /* --color-background: var(--vt-c-white); */
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
   --color-border: var(--vt-c-divider-light-2);
@@ -48,16 +48,21 @@
 *:after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  /* margin;/* font-weight:400; */
   ht: 400
+}
+
+html {
+  font-size: 62.5%;
+  /* 1rem = 10px */
 }
 
 body {
   color: var(--color-text);
-  background: var(--color-background);
+  background: #000000;
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 15px;
+  font-size: 1.6rem;
+  /* 1.6rem = 16px */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -88,7 +93,7 @@ a {
 }
 
 
-#app {
+.app {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
@@ -96,8 +101,4 @@ a {
   width: 100%;
   height: 100%;
   overflow: hidden;
-}
-
-#my-loading {
-  position: absolute
 }
