feat(Backgorund): ajuste na animaçao

--- a/src/components/Background/Background.module.scss
+++ b/src/components/Background/Background.module.scss
@@ -127,9 +127,9 @@
       }
 
       to {
-        /* opacity:.8; */
-        /* -webkit-transform:rotate(360deg) scale(.9); */
-        /* transform:rotate(360deg) scale(.9); */
+        opacity: .8;
+        -webkit-transform: rotate(360deg) scale(.9);
+        transform: rotate(360deg) scale(.9)
       }
     }
 
