--- a/src/components/PageContent/PageContent.module.scss
+++ b/src/components/PageContent/PageContent.module.scss
@@ -1,9 +1,9 @@
-.box {
-  width: 200px;
-  height: 200px;
-  z-index: 10;
-  position: relative;
-  // background-color: blue;
+.swipper {
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.4s ease-out;
+  transition: all 0.4s ease-out;
+  z-index: 4;
 
   .box2 {
     height: 100px;
